--- a/App/views/createNewOrder/chooseRestaurantList.ejs
+++ b/App/views/createNewOrder/chooseRestaurantList.ejs
@@ -26,7 +26,7 @@
     <h1>Your userid is <%= uid%></h1>
 
 
-    <form id="chooseFoodItem" action="chooseFoodItemAndQuantity" role="form" method="post">
+    <form id="chooseFoodItem" action="chooseDate" role="form" method="post">
         <table class="table">
             <thead>
                 <tr>
