register customer done

--- a/App/views/index.ejs
+++ b/App/views/index.ejs
@@ -24,6 +24,7 @@
     <li><a href="/select">View All Users</a></li>
     <li><a href="/drivers">View All Drivers</a></li>
     <li><a href="/driverRegister">Register as Driver</a></li>
+    <li><a href="/registercustomer">Register as Customer</a></li>
     
   </body>
 </html>
