edited home page

--- a/App/views/driver/viewDriverSummaryInfo.ejs
+++ b/App/views/driver/viewDriverSummaryInfo.ejs
@@ -24,7 +24,7 @@
 
 <body>
     <h1><%= title%></h1>
-    <p id = "date" style = "font-weight:bold"></p>
+    <p id = "date" style = "font-style:italic"></p>
     <%var totalhours = 0 %>
     <%for (var i = 0; i < data.length; i++) {%> 
         <%totalhours += ((data[i].endtime - data[i].starttime)/100)%>
