--- a/App/views/driver/driverhomepage.ejs
+++ b/App/views/driver/driverhomepage.ejs
@@ -14,6 +14,34 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   </head>
   <style>
+
+#heading {
+        z-index: 900;
+        font-size: 80;
+        color: white;
+        position: absolute;
+        top: 5%;
+        left: 13%;
+        transform: translate(-50%, -50%);
+        flex: auto;
+        padding-bottom: 10px;
+        font-style:bold;
+    }
+
+    .rectangle {
+        z-index: 800;
+        width: 100%;
+        height: 100px;
+        background: #b5d9d9;
+        border: 2px solid #b5d9d9;
+        outline-style: solid;
+        outline-color: #b5d9d9;
+        position: absolute;
+        top: 0%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
     a:link,
     a:visited {
         color: grey;
@@ -25,9 +53,14 @@
     }
   </style>
   <body>
-    <h1>Welcome <%= name%></h1>
-    <p id = "date" style = "font-weight:bold"></p>
-    <p style = "font-style:italic">Home Page for Delivery Riders</p>
+    <h5 id = "heading">Home Page for Delivery Riders</h5>
+    <div class="rectangle"></div>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    <p style = "font-weight:bold">Welcome <%= name%></p>
+    <p id = "date" style = "font-style:italic"></p>
+
     <li><a href="/viewSalary/<%= uid%>">View Salary</a></li>
     <li><a href="/viewWorkSchedule/<%= uid%>">View Work Schedule</a></li>
     <!-- total number of hours worked, number of orders delivered this week/month -->
