past order done

--- a/App/views/customerhomepage.ejs
+++ b/App/views/customerhomepage.ejs
@@ -1,48 +1,68 @@
 <!DOCTYPE html>
 <html>
-  <head>
-		<!-- Page Title -->
-    <title>Home Page</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-		
-		<!-- CSS for Styling -->
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-		
-		<!-- JavaScript for Interactivity -->
-		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <h1>Welcome <%= data[0].name%></h1>
-    <table class="table">
-      <tr>
-        <th scope="col">User Id</th>
-        <th scope="col">Username</th>
-      </tr>
-      <tr>
-        <td><%= data[0].uid%></td>
-        <td><%= data[0].username%></td>
-      </tr>
 
-    </table>
-    <p>Home Page for Customers</p>
-    <li><a href="/restaurants">View All Restaurants</a></li>
-    <form id="createOrder" action="chooseRestaurant" method="post">
-      <input type="hidden" name="uid" value="<%= data[0].uid%>">
-      <button type="submit" class="btn btn-primary">Create New Order</button>
-    </form>
-    <li>View Order History</li>
+<head>
+  <!-- Page Title -->
+  <title>Home Page</title>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
 
-    <script>
-      (function () {
-          window.addEventListener('load', function () {
-              var forms = [document.getElementById('createOrder')];
-              var validation = Array.prototype.filter.call(forms, function (form) {
-                  form.addEventListener('submit', check, false);
-              });
-          }, false);
-      })();
+  <!-- CSS for Styling -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+  <!-- JavaScript for Interactivity -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+    integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+    integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+    crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <h1>Welcome <%= data[0].name%></h1>
+  <table class="table">
+    <tr>
+      <th scope="col">User Id</th>
+      <th scope="col">Username</th>
+    </tr>
+    <tr>
+      <td><%= data[0].uid%></td>
+      <td><%= data[0].username%></td>
+    </tr>
+
+  </table>
+  <p>Home Page for Customers</p>
+  <li><a href="/restaurants">View All Restaurants</a></li>
+  <form id="createOrder" action="chooseRestaurant" method="post">
+    <input type="hidden" name="uid" value="<%= data[0].uid%>">
+    <button type="submit" class="btn btn-primary">Create New Order</button>
+  </form>
+  <form id="viewOrderHistory" action="viewOrderHistory" method="post">
+    <input type="hidden" name="uid" value="<%= data[0].uid%>">
+    <button action="/viewOrderHistory" class="btn btn-primary">View Order History</button>
+  </form>
+  <script>
+    (function () {
+      window.addEventListener('load', function () {
+        var forms = [document.getElementById('createOrder')];
+        var validation = Array.prototype.filter.call(forms, function (form) {
+          form.addEventListener('submit', check, false);
+        });
+      }, false);
+    })();
+    (function () {
+      window.addEventListener('load', function () {
+        var forms = [document.getElementById('viewOrderHistory')];
+        var validation = Array.prototype.filter.call(forms, function (form) {
+          form.addEventListener('submit', check, false);
+        });
+      }, false);
+    })();
   </script>
-  </body>
+</body>
+
 </html>
