--- a/App/views/addRestaurantFoodItem.ejs
+++ b/App/views/addRestaurantFoodItem.ejs
@@ -43,15 +43,16 @@
             <div class="form-group">
 				Is this item available now? <input type="radio" name="availability" id = "availability" value="True"/> True
 											<input type="radio" name="availability" id= "availability" value="False"/> False
-            </div>
-            <div class="form-group">
+			</div>
+			<input type="hidden" class="form-control" id="rid" name="rid" value=<%= rid%>>
+            <!-- <div class="form-group">
 				From Which Restaurant:
 				<select name="rid" id="rid">
 				  <% for(var i=0; i<restaurants.length; i++) { %>
 				  <option value=<%=restaurants[i].rid%>> <%=restaurants[i].name%> </option>
 				  <% } %>
 				</select>
-			  </div>
+			  </div> -->
 			<button type="submit" class="btn btn-primary">Submit</button>
 		</form>
 		
