--- a/App/views/deleteRestaurantPromotion.ejs
+++ b/App/views/deleteRestaurantPromotion.ejs
@@ -1,61 +1,72 @@
 <!DOCTYPE html>
 <html>
-  <head>
-		<!-- Page Title -->
-    <title>RS: Delete Restaurant Promotion</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-		
-		<!-- CSS for Styling -->
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-		
-		<!-- JavaScript for Interactivity -->
-		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <h1><%= title%></h1>
-    <form id="html_form" action="deleteRestaurantPromotion" role="form" method="post">
+
+<head>
+  <!-- Page Title -->
+  <title>RS: Delete Restaurant Promotion</title>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+
+  <!-- CSS for Styling -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+  <!-- JavaScript for Interactivity -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+    integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+    integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+    crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <h1><%= title%></h1>
+  <!-- <form id="html_form" action="deleteRestaurantPromotion" role="form" method="post">
         <div class="form-group">
             <label for="rpid">Restaurant Promotion's ID:</label>
             <input type="text" class="form-control" id="rpid" name="rpid" placeholder="Enter the promotion's ID">
         </div>
-        <div class="form-group">
-            From which Restaurant:  
-           <select name ="rid" id ="rid">
-               <option value="1">MacDonald</option>
-               <option value="2">KFC</option>
-               <option value="3">Burger King</option>
-            </select>
-        </div>
+        <input type="hidden" value=<%= rid%>>
         <button type="submit" class="btn btn-primary">Delete</button>
-    </form>
-		<table class="table">
-			<thead>
-				<tr>
-					<th scope="col">Restaurant Promotion ID</th>
-					<th scope="col">Name</th>
-					<th scope="col">Discount Amount</th>
-                    <th scope="col">Start Date</th>
-                    <th scope="col">End Date</th>
-				</tr>
-			</thead>
-			<tbody>
-				<% for(var i=0; i<data.length; i++) { %>
-				<tr>
-                    <td><%= data[i].rpid%></td>
-                    <td><%= data[i].name%></a></td>
-					<td><%= data[i].discountamount%></td>
-                    <td><%= data[i].startdate%></td>
-                    <td><%= data[i].enddate%></td>
-				</tr>
-				<% } %>
-			</tbody>
-        </table>
-        <!--footer-->
-    <div style="width: 100%; clear: both;">
-        <img src="https://bit.ly/2102footer">
-      </div>
-  </body>
-</html>
+    </form> -->
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Restaurant Promotion ID</th>
+        <th scope="col">Name</th>
+        <th scope="col">Discount Amount</th>
+        <th scope="col">Start Date</th>
+        <th scope="col">End Date</th>
+        <th scope="col">Action</th>
 
+      </tr>
+    </thead>
+    <tbody>
+      <% for(var i=0; i<data.length; i++) { %>
+      <tr>
+        <td><%= data[i].rpid%></td>
+        <td><%= data[i].name%></a></td>
+        <td><%= data[i].discountamount%></td>
+        <td><%= data[i].startdate%></td>
+        <td><%= data[i].enddate%></td>
+        <td>
+          <form id="html_form" action="deleteRestaurantPromotion" role="form" method="post">
+            <input type="hidden" id="rid" name="rid" value=<%= rid%>>
+            <input type="hidden" id="rpid" name="rpid" value=<%= data[i].rpid%>>
+            <button type="submit" class="btn btn-primary">Delete</button>
+          </form>
+        </td>
+      </tr>
+      <% } %>
+    </tbody>
+  </table>
+  <!--footer-->
+  <div style="width: 100%; clear: both;">
+    <img src="https://bit.ly/2102footer">
+  </div>
+</body>
+
+</html>
