--- a/App/views/login/logindriver.ejs
+++ b/App/views/login/logindriver.ejs
@@ -25,6 +25,7 @@
 
 <body>
     <h1><%= title%></h1>
+    <h1><%= errormessage%></h1>
     <form id="html_form" action="logindriver" role="form" method="post">
         <div class="form-group">
             <label for="username">Username</label>
