view driver assigned to order

--- a/App/views/fdsmanager/fdsmanagerhomepage.ejs
+++ b/App/views/fdsmanager/fdsmanagerhomepage.ejs
@@ -29,7 +29,7 @@
 
 
     <li><a href="/drivers">View All Drivers</a></li>
-
+    <li><a href="/viewdriverassignedtoorder">View Drivers Assigned to Orders</a></li>
 
 
   </body>
