--- a/App/views/index.ejs
+++ b/App/views/index.ejs
@@ -191,7 +191,7 @@
         <a href="/logindriver">Login as Driver</a>
         <a href="/login">Login as Customer</a>
         <a href="/loginrestaurantstaff">Login as Restaurant Staff</a>
-        <a href="/loginfdsmanager">Login a FDS Manager</a>
+        <a href="/loginfdsmanager">Login as FDS Manager</a>
       </div>
     </div>
     
