--- a/App/views/login/login.ejs
+++ b/App/views/login/login.ejs
@@ -29,7 +29,7 @@
     <form id="html_form" action="login" role="form" method="post">
         <div class="form-group">
             <label for="username">Username</label>
-            <input type="text" class="form-control" id="username" name="username" placeholder="Enter a unique username">
+            <input type="text" class="form-control" id="username" name="username" placeholder="Enter your username">
         </div>
         <div class="form-group">
             <label for="password">Password</label>
